--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "next": "^12.1.0",
     "next-connect": "^0.12.1",
     "next-secure-headers": "^2.2.0",
+    "octokit": "^1.7.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "tailwind-merge": "^1.2.0"
