--- a/package.json
+++ b/package.json
@@ -22,69 +22,69 @@
   },
   "dependencies": {
     "@emotion/cache": "latest",
-    "@emotion/react": "11.8.1",
+    "@emotion/react": "11.9.0",
     "@emotion/server": "latest",
     "@emotion/styled": "11.8.1",
-    "@fontsource/roboto": "^4.5.3",
-    "@fontsource/ubuntu": "^4.5.3",
-    "@mui/material": "5.4.4",
-    "axios": "^0.26.0",
+    "@fontsource/roboto": "^4.5.5",
+    "@fontsource/ubuntu": "^4.5.6",
+    "@mui/material": "5.6.3",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
-    "chalk": "^5.0.0",
+    "chalk": "^5.0.1",
     "clsx": "^1.1.1",
-    "mongoose": "^6.2.2",
-    "next": "^12.1.0",
+    "mongoose": "^6.3.1",
+    "next": "^12.1.5",
     "next-connect": "^0.12.1",
     "next-secure-headers": "^2.2.0",
     "octokit": "^1.7.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.27.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
-    "tailwind-merge": "^1.2.0"
+    "tailwind-merge": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
+    "@babel/core": "^7.17.10",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@types/react": "^17.0.39",
-    "@types/tailwindcss": "^3.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@types/react": "^18.0.8",
+    "@types/tailwindcss": "^3.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "autoprefixer": "^10.4.5",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-next": "^12.1.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unicorn": "^41.0.0",
+    "eslint-plugin-unicorn": "^42.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.4",
-    "next-sitemap": "^2.5.4",
-    "postcss": "^8.4.7",
-    "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.8",
-    "sass": "^1.49.9",
+    "jest": "^28.0.3",
+    "lint-staged": "^12.4.1",
+    "next-sitemap": "^2.5.20",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.10",
+    "sass": "^1.51.0",
     "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "tsconfig-paths-jest": "^0.0.1",
-    "typescript": ">=4.5.0 && <4.6.0"
+    "typescript": "^4.6.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
