--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,135 +1,71 @@
 [
   {
-    "description": "My personal website, showing my projects, skills, resume andmore. My personal website, showing my projects, skills, resume and more.",
-    "forks": 0,
+    "description": "Online voting App using basic nodejs, express and openPGP for encryption. For ACEM Kenitra.",
+    "forks": 1,
     "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
+    "languages": ["scss", "NextJs", "MongoDB", "Typescript"],
     "liveUrl": "",
+    "repoUrl": "https://github.com/faouziMohamed/acem-vote",
+    "stars": 1,
+    "title": "acem-vote"
+  },
+  {
+    "description": "A simple web Navigator based on Chromium, writed in c++ using Qt5 framwork",
+    "forks": 1,
+    "image": "",
+    "languages": ["JavaScript", "NextJs", "MongoDB", "NextJs", "scss"],
+    "liveUrl": "https://data-translate.vercel.app/",
+    "repoUrl": "https://github.com/faouziMohamed/data-translate",
+    "stars": 0
+  },
+  {
+    "description": "A Social Network like web app, with a design based on Facebook and other social networks",
+    "forks": 1,
+    "image": "",
+    "languages": ["css", "js", "NextJs"],
+    "liveUrl": "https://cra-acem.tech",
     "repoUrl": "https://github.com/faouziMohamed/social-share",
     "stars": 0,
     "title": "social-share"
   },
   {
-    "description": "Regular stuff",
+    "description": "Unofficial website of the Academic Research Club of ACEM Kenitra.",
     "forks": 0,
     "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
-    "liveUrl": "",
-    "repoUrl": "https://github.com/faouziMohamed/cra-forms",
-    "stars": 0,
-    "title": "cra-forms"
-  },
-  {
-    "description": "My personal website, showing my projects, skills, resume andmore. My personal website, showing my projects, skills, resume and more.",
-    "forks": 0,
-    "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
-    "liveUrl": "",
-    "repoUrl": "https://github.com/faouziMohamed/acem-vote",
-    "stars": 0,
-    "title": "acem-vote"
-  },
-  {
-    "description": "My personal website, showing my projects, skills, resume andmore. My personal website, showing my projects, skills, resume and more.",
-    "forks": 0,
-    "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
+    "languages": ["scss", "NextJs", "MongoDB", "Typescript"],
     "liveUrl": "",
     "repoUrl": "https://github.com/faouziMohamed/cra",
     "stars": 0,
     "title": "cra"
   },
   {
-    "description": "My personal website, showing my projects, skills, resume andmore. My personal website, showing my projects, skills, resume and more.",
+    "description": "Frontend web app for machine translation written with NextJs (React Framework)",
     "forks": 0,
     "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
+    "languages": ["scss", "reactJs", "NextJs", "Javascript"],
     "liveUrl": "",
     "repoUrl": "https://github.com/faouziMohamed/fz-nmt",
     "stars": 0,
     "title": "fz-nmt"
   },
   {
-    "description": "My personal website, showing my projects, skills, resume andmore. My personal website, showing my projects, skills, resume and more.",
+    "description": "Desktop application that shows data for the covid 19 (cases, deaths, tests,....)",
     "forks": 0,
     "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
+    "languages": ["PyQt5", "qss", "Python"],
     "liveUrl": "",
     "repoUrl": "https://github.com/faouziMohamed/covid-data",
-    "stars": 0,
+    "stars": 3,
     "title": "covid-data"
   },
   {
-    "description": "My personal website, showing my projects, skills, resume andmore. My personal website, showing my projects, skills, resume and more.",
-    "forks": 0,
+    "description": "A simple web Navigator based on Chromium, writed in c++ using Qt5 framwork",
+    "forks": 1,
     "image": "",
-    "languages": [
-      "html",
-      "css",
-      "js",
-      "reactJs",
-      "NextJs",
-      "MongoDB",
-      "Typescript",
-      "Python"
-    ],
+    "languages": ["C++", "Qt5"],
     "liveUrl": "",
     "repoUrl": "https://github.com/faouziMohamed/fzNavigator",
-    "stars": 0,
+    "stars": 1,
     "title": "fzNavigator"
   }
 ]
