--- a/package.json
+++ b/package.json
@@ -39,70 +39,70 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/cache": "latest",
-    "@emotion/react": "11.9.0",
+    "@emotion/cache": "11.9.3",
+    "@emotion/react": "11.9.3",
     "@emotion/server": "latest",
-    "@emotion/styled": "11.8.1",
-    "@fontsource/roboto": "^4.5.5",
-    "@fontsource/ubuntu": "^4.5.6",
-    "@mui/material": "5.6.3",
+    "@emotion/styled": "11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@fontsource/ubuntu": "^4.5.10",
+    "@mui/material": "5.9.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
-    "clsx": "^1.1.1",
-    "mongoose": "^6.3.1",
-    "next": "^12.1.5",
-    "next-connect": "^0.12.1",
+    "clsx": "^1.2.1",
+    "mongoose": "^6.4.4",
+    "next": "^12.2.2",
+    "next-connect": "^1.0.0-next.1",
     "next-secure-headers": "^2.2.0",
-    "octokit": "^1.7.1",
+    "octokit": "^2.0.4",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-hook-form": "^7.30.0",
-    "react-icons": "^4.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
     "react-transition-group": "^4.4.2",
-    "tailwind-merge": "^1.2.1"
+    "tailwind-merge": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
+    "@babel/core": "^7.18.6",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@svgr/webpack": "^6.2.1",
-    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@types/react": "^18.0.8",
-    "@types/tailwindcss": "^3.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "autoprefixer": "^10.4.5",
-    "eslint": "^8.14.0",
+    "@testing-library/react": "^13.3.0",
+    "@types/react": "^18.0.15",
+    "@types/tailwindcss": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.20.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^12.1.5",
+    "eslint-config-next": "^12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unicorn": "^42.0.0",
+    "eslint-plugin-unicorn": "^43.0.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^7.0.4",
-    "jest": "^28.0.3",
-    "lint-staged": "^12.4.1",
-    "next-sitemap": "^2.5.20",
-    "postcss": "^8.4.13",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.10",
-    "sass": "^1.51.0",
-    "standard-version": "^9.3.2",
-    "tailwindcss": "^3.0.24",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "lint-staged": "^13.0.3",
+    "next-sitemap": "^3.1.11",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "sass": "^1.53.0",
+    "standard-version": "^9.5.0",
+    "tailwindcss": "^3.1.6",
     "tsconfig-paths-jest": "^0.0.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
